syntax = "proto3";

package calculator;

option go_package = "calculatorpb";

message Nums {
    int32 firstNum = 1;
    int32 secondNum = 2;
}

message SumRequest {
    Nums nums = 1;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 num = 1;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

message ComputeAverageRequest {
    float num = 1;
}

message ComputeAverageResponse {
    float result = 1;
}

message FindMaximumRequest {
    int32 num = 1;
}

message FindMaximumResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service SumService {
    rpc Sum (SumRequest) returns (SumResponse) {
    };

    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {
    };

    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {
    };

    rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse) {
    };

    //    error handling
    //    this RPC will throw an exception if the sent number is negative
    //    The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {
    };
}
